--- a/src/components/login.component.html
+++ b/src/components/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-    <img src="D:\adventclient\src\assets\images\logo1.jpg" alt="Logo" class="logo" />
+    <img src="~/.assets/images/logo.png" alt="Logo" class="logo" />
 
     <h2>Login</h2>
 
