--- a/src/components/login.component.html
+++ b/src/components/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-    <img src="~/.assets/images/logo.png" alt="Logo" class="logo" />
+    <div class="logo"></div>
 
     <h2>Login</h2>
 
@@ -11,17 +11,18 @@
     <!-- Login form -->
     <form (ngSubmit)="onLogin()" [formGroup]="loginForm">
         <div class="form-group">
-            <label for="email">Email:</label>
+            <label for="email" style="font-size: 13px;">Email:</label>
+
             <input id="email" formControlName="email" type="email" placeholder="Enter your email" />
         </div>
 
         <div class="form-group">
-            <label for="password">Password:</label>
+            <label for="password" style="font-size: 13px;">Password:</label>
             <input id="password" formControlName="password" type="password" placeholder="Enter your password" />
         </div>
 
         <div class="form-group">
-            <label for="userType">User Type:</label>
+            <label for="userType"style="font-size: 13px;">User Type:</label>
             <select id="userType" formControlName="userType">
                 <option value="">Select a user type</option>
                 <option value="TruckingCompany">Trucking Company</option>
@@ -33,9 +34,14 @@
     </form>
 
     <!-- Link to register page -->
-    <div class="register-link">
+    <!-- <div class="register-link">
         Don't have an account? <a (click)="navigateToRegister()">Register Now</a>
+    </div> -->
+
+    <div class="register-link">
+        Don't have an account? <a (click)="navigateToRegister()" class="clickable-link">Register Now</a>
     </div>
+    
 
     <!-- Terms of Service notice -->
     <div class="tos">
@@ -58,9 +64,9 @@
         width: 400px;
         margin: 0 auto;
         padding: 20px;
-        border: 1px solid #ccc;
+        border: 10px solid rgb(216, 109, 127);
         border-radius: 5px;
-        background-color: #f5f5f5;
+        background-color:white;
         text-align: center;
         font-family: Arial, sans-serif;
     }
@@ -69,6 +75,17 @@
         width: 150px;
         margin-bottom: 20px;
     }
+    .clickable-link {
+    color: #007bff;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.clickable-link:hover {
+    color: #0056b3;
+    text-decoration: none;
+}
+
 
     h2 {
         color: #333;
@@ -83,6 +100,7 @@
     .form-group {
         text-align: left;
         margin-bottom: 15px;
+        
     }
 
     label {
