--- a/src/components/register.component.html
+++ b/src/components/register.component.html
@@ -2,83 +2,125 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register</title>
 </head>
 
 <body>
-    <div class="register-container">
-        <h2 style="color:black; text-transform: uppercase; font-style: italic;">Register</h2>
+  <div class="register-container">
+    <h2 style="color:whitesmoke; text-transform: uppercase; font-style: italic;">Register</h2>
 
-        <!-- Select registration type -->
-        <div class="button-group">
-            <button (click)="setRegisterType('TruckingCompany')">Register as Trucking Company</button>
-            <button (click)="setRegisterType('Terminal')">Register as Terminal</button>
-        </div>
-
-        <!-- Display the API error message -->
-        <div *ngIf="apiErrorMessage" class="error-message">
-            {{ apiErrorMessage }}
-        </div>
-
-        <!-- Registration form, hidden when registration is successful -->
-        <form (ngSubmit)="onRegister()" [formGroup]="registerForm" *ngIf="registerType">
-            <div>
-                <label for="email">Email:</label>
-                <input id="email" formControlName="email" type="email" />
-            </div>
-            <div>
-                <label for="password">Password:</label>
-                <input id="password" formControlName="password" type="password" />
-            </div>
-
-            <!-- Trucking Company fields -->
-            <div *ngIf="registerType === 'TruckingCompany'">
-                <div>
-                    <label for="trCompanyName">Company Name:</label>
-                    <input id="trCompanyName" formControlName="trCompanyName" type="text" />
-                </div>
-                <div>
-                    <label for="gstNo">GST Number:</label>
-                    <input id="gstNo" formControlName="gstNo" type="text" />
-                </div>
-                <div>
-                    <label for="transportLicNo">Transport License Number:</label>
-                    <input id="transportLicNo" formControlName="transportLicNo" type="text" />
-                </div>
-            </div>
-
-            <!-- Terminal fields -->
-            <div *ngIf="registerType === 'Terminal'">
-                <div>
-                    <label for="portName">Port Name:</label>
-                    <input id="portName" formControlName="portName" type="text" />
-                </div>
-                <div>
-                    <label for="address">Address:</label>
-                    <input id="address" formControlName="address" type="text" />
-                </div>
-                <div>
-                    <label for="city">City:</label>
-                    <input id="city" formControlName="city" type="text" />
-                </div>
-                <div>
-                    <label for="state">State:</label>
-                    <input id="state" formControlName="state" type="text" />
-                </div>
-                <div>
-                    <label for="country">Country:</label>
-                    <input id="country" formControlName="country" type="text" />
-                </div>
-            </div>
-
-            <button type="submit">Register</button>
-        </form>
-
-        <!-- Back to Login button -->
-        <button (click)="goBackToLogin()">Back to Login</button>
+    <!-- Select registration type -->
+    <div class="button-group">
+      <button *ngIf="registerType !== 'TruckingCompany'" (click)="setRegisterType('TruckingCompany')">
+        Register as Trucking Company
+      </button>
+      <button *ngIf="registerType !== 'Terminal'" (click)="setRegisterType('Terminal')">
+        Register as Terminal
+      </button>
     </div>
+
+    <!-- Display the API error message -->
+    <div *ngIf="apiErrorMessage" class="error-message">
+      {{ apiErrorMessage }}
+    </div>
+
+    <!-- Registration form, hidden when registration is successful -->
+    <form (ngSubmit)="onRegister()" [formGroup]="registerForm" *ngIf="registerType">
+      <div class="input-container">
+        <label for="email">Email:</label>
+        <input id="email" formControlName="email" type="email" />
+        <span *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched" class="helper-text">
+          Please fill out this field.
+        </span>
+      </div>
+      <div class="input-container">
+        <label for="password">Password:</label>
+        <input id="password" formControlName="password" type="password" />
+        <span *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched" class="helper-text">
+          Please fill out this field.
+        </span>
+      </div>
+
+      <!-- Trucking Company fields -->
+      <div *ngIf="registerType === 'TruckingCompany'">
+        <div class="input-container">
+          <label for="trCompanyName">Company Name:</label>
+          <input id="trCompanyName" formControlName="trCompanyName" type="text" />
+          <span *ngIf="registerForm.get('trCompanyName')?.invalid && registerForm.get('trCompanyName')?.touched"
+            class="helper-text">
+            Please fill out this field.
+          </span>
+        </div>
+
+        <div class="input-container">
+          <label for="gstNo">GST Number:</label>
+          <input id="gstNo" formControlName="gstNo" type="text" />
+          <span *ngIf="registerForm.get('gstNo')?.invalid && registerForm.get('gstNo')?.touched" class="helper-text">
+            Please fill out this field.
+          </span>
+        </div>
+
+        <div class="input-container">
+          <label for="transportLicNo">Transport License Number:</label>
+          <input id="transportLicNo" formControlName="transportLicNo" type="text" />
+          <span *ngIf="registerForm.get('transportLicNo')?.invalid && registerForm.get('transportLicNo')?.touched"
+            class="helper-text">
+            Please fill out this field.
+          </span>
+        </div>
+      </div>
+
+      <!-- Terminal fields -->
+      <div *ngIf="registerType === 'Terminal'">
+        <div class="input-container">
+          <label for="portName">Port Name:</label>
+          <input id="portName" formControlName="portName" type="text" />
+          <span *ngIf="registerForm.get('portName')?.invalid && registerForm.get('portName')?.touched" class="helper-text">
+            Please fill out this field.
+          </span>
+        </div>
+
+        <div class="input-container">
+          <label for="address">Address:</label>
+          <input id="address" formControlName="address" type="text" />
+          <span *ngIf="registerForm.get('address')?.invalid && registerForm.get('address')?.touched" class="helper-text">
+            Please fill out this field.
+          </span>
+        </div>
+
+        <div class="input-container">
+          <label for="city">City:</label>
+          <input id="city" formControlName="city" type="text" />
+          <span *ngIf="registerForm.get('city')?.invalid && registerForm.get('city')?.touched" class="helper-text">
+            Please fill out this field.
+          </span>
+        </div>
+
+        <div class="input-container">
+          <label for="state">State:</label>
+          <input id="state" formControlName="state" type="text" />
+          <span *ngIf="registerForm.get('state')?.invalid && registerForm.get('state')?.touched" class="helper-text">
+            Please fill out this field.
+          </span>
+        </div>
+
+        <div class="input-container">
+          <label for="country">Country:</label>
+          <input id="country" formControlName="country" type="text" />
+          <span *ngIf="registerForm.get('country')?.invalid && registerForm.get('country')?.touched" class="helper-text">
+            Please fill out this field.
+          </span>
+        </div>
+      </div>
+
+      <button type="submit">Register</button>
+    </form>
+
+    <!-- Back to Login button -->
+    <button (click)="goBackToLogin()">Back to Login</button>
+  </div>
 </body>
 
 </html>
