--- a/src/styles1.css
+++ b/src/styles1.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+    height: 100%; /* Ensure html and body take the full height */
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
+    overflow: hidden; /* Prevent overflow */
+}
+
+
