--- a/src/components/register.component.html
+++ b/src/components/register.component.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="register-container">
-    <h2 style="color:whitesmoke; text-transform: uppercase; font-style: italic;">Register</h2>
+    <!-- <h2 style="color:whitesmoke; text-transform: uppercase; font-style: italic;">Register</h2> -->
 
     <!-- Select registration type -->
     <div class="button-group">
