--- a/src/components/register.component.css
+++ b/src/components/register.component.css
@@ -1,15 +1,18 @@
-/* Reset margins and paddings */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
 }
 
 html, body {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+
+
 }
 
 body {
@@ -18,11 +21,53 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
+  max-height: 100vh;
+  
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  
 }
+input, select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  color: #000;
+}
+
+select {
+  appearance: none; /* For consistent appearance across browsers */
+  -webkit-appearance: none; /* For Chrome and Safari */
+  -moz-appearance: none; /* For Firefox */
+}
+
+select:focus, input:focus {
+  border-color: #03e9f4; /* Same focus color for both input and select */
+  outline: none; /* Remove default browser outline */
+  box-shadow: 0 0 2px rgba(3, 233, 244, 0.5); /* Add custom focus shadow */
+}
+
+.input-container {
+  font-size: 15px;
+  padding: 4px;
+  color: whitesmoke;
+  font-style: italic;
+  position: relative;
+  
+}
+
+.helper-text {
+  color: red;
+  font-size: 12px;
+  position: absolute;
+  bottom: -18px;
+  left: 0;
+}
+
+
 
 .register-container {
   background-color: rgba(9, 0, 0, 0.805); /* Slight transparency */
@@ -44,8 +89,9 @@ h2 {
 }
 
 button {
+  font-style: italic  ;
   width: 100%;
-  padding: 10px;
+  padding: 5px;
   background-color: transparent;
   color: #03e9f4;
   border: 2px solid #03e9f4;
